# rust-to-you

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  README-en.md  README.md
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.2.0-REQUIREMENTS.md  v1.2.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-intake-guardrails/: 01-01-PLAN.md  01-02-PLAN.md  01-CONTEXT.md
.planning/milestones/v1.0-phases/02-collection-layer/: 02-02-SUMMARY.md  02-03-PLAN.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-analysis-layer/: 03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-VERIFICATION.md
.planning/milestones/v1.0-phases/04-presentation-layer/: 04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/01-intake-guardrails/: 01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-collection-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VALIDATION.md
.planning/phases/03-analysis-layer/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-presentation-layer/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-VALIDATION.md
.planning/phases/05-polish-calibration/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/phases/06-safe-intake-pre-flight-guard/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md
.planning/phases/07-interruptible-lifecycle-temp-hygiene/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md  07-DISCUSSION-LOG.md  07-PATTERNS.md  07-RESEARCH.md  07-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  METRICS.md  PITFALLS.md  STACK.md  SUMMARY.md  VIBES.md
docs/: THREAT-MODEL.md
src/: error.rs  i18n.rs  lib.rs  main.rs  snapshot.rs
src/analyze/: branch.rs  commit.rs  findings.rs  infra.rs  language.rs  mod.rs  relics.rs  verdict.rs  vibes.rs
src/app/: collect.rs  mod.rs  run.rs  session.rs
src/cli/: args.rs  mod.rs  parse.rs
src/github/: client.rs  mod.rs
src/repo/: branches.rs  clone.rs  history.rs  hygiene.rs  mod.rs
src/report/: sections.rs
src/scan/: infra.rs  lang.rs  mod.rs
src/tui/: app.rs  format.rs  mod.rs  plain.rs  report.rs  section.rs
tests/: interrupt.rs
(+9 files in other folders)
