[package]
name = "rust-to-you"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-to-you"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
git2 = { version = "0.21", features = ["https", "vendored-openssl"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokei = { version = "14", default-features = false }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
